# meta

./: .gitignore  Dockerfile  README.md  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
server/: app.py  environment.py
server/templates/easy/: build.sh  test_app.py
server/templates/hard/: .env.secrets  app.py  build.sh  requirements.txt
server/templates/medium/: app.py  build.sh  docker-compose.yml  test_app.py
server/workspace/: build.sh  deploy.sh  test_app.py  workflow.yml
tests/: conftest.py  test_api.py  test_e2e.py  test_environment.py
tests/test_workspace/: requirements.txt
