[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cicd-pipeline-fixer"
version = "1.0.0"
description = "An RL environment for fixing broken CI/CD pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests"
]

[project.scripts]
server = "server.app:main"
